Changes in 2.0.4 from 2.0.3
---------------------------

Possibly breaking changes

* The identifiers `fresh_for`, `is_name`, and `prune_arg` are added to
  the pervasive signature. Thus, they can no longer be used by users in
  definitions.

Additions

* Added support for (first-order) polymorphic definitions. Definitions
  such as the following are now accepted.

        Define fresh : A -> B -> prop by
          nabla x, fresh x M.

  In every use of the definition, the type arguments are implicitly
  instantiated. The type-checking *for* such definitions is identical to
  taking all the unbound variable names and quantifying them on the outside.
  In other words, for the above definition, the behavior of type-checking is
  the same as if there were:

        Kind A,B  type
        Define fresh : A -> B -> prop by
          nabla x, fresh x M.

  Once such a definition is type-checked, the defined symbols are added to
  the signature as new polymorphic constants, in a vein similar to the `pi`
  constant. Whenever it is used, the type arguments are implicitly
  instantiated based on the types of the arguments.

* Added support for (first-order) polymorphic theorems. A theorem such as
  the following is now accepted.

        Theorem prune_arg[A] : forall E L, nabla (x:A), member (E x) L ->
           exists F, E = x\ F.

  The `A` here is a type parameter, which must be distinct from the other
  basic types in scope. To use such a theorem, you *must* supply enough
  arguments. An example:

        Theorem bar : forall E G, nabla (x:tm) (y:ty),
           member (E x y) G -> exists F, E = x\ y\ F.
        intros.
        apply prune_arg[tm] to H1.
        apply prune_arg[ty] to H1.
        search.

  Incidentally, the above `prune_arg` lemma is now part of the pervasive
  environment.

* Added a new toplevel declarative form, Schemas. The general form of a
  Schema declaration is:

        Schema name := clause1 ; ... ; clauseN.

  where each clause is of the form