@@ -26,4 +26,3 @@ src/unit_test
 abella
 _build
 examples/examples.tar.gz
-/src/outtakes.ml
