@@ -6,6 +6,9 @@ Possibly breaking changes
 * The identifiers `fresh_for`, `is_name`, and `prune_arg` are added to
   the pervasive signature. Thus, they can no longer be used by users in
   definitions.
+* The `search` tactic has the same error handling behavior in interactive
+  and non-interactive modes, functioning like a failed tactic in both cases
+  if no subgoals were closed.
 
 Additions
 
